--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="google-site-verification" content="lFEyEqDPcGNvjJ7WpL1zrsJEEnD8iUmUHH63E8BE7Ms" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AmA | Q-Solution - Digital Excellence</title>
