--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="google-site-verification" content="lFEyEqDPcGNvjJ7WpL1zrsJEEnD8iUmUHH63E8BE7Ms" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AmA | Q-Solution - Digital Excellence</title>
+    <title>axonxcode</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Cairo:wght@400;600;700&display=swap" rel="stylesheet">
